Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2014-04-28 (SVN):
    * gl_screen.c: fix screenshots when width isn't a multiple of 4.
      explained by Sander van Dijk.
    * bumped the version date stamp to 2014-04-28.

2014-04-27 (SVN):
    * HWAL texture loading is now a compile time option in h2config.h.
      default is disabled: it was a dead project of Korax, no one ever
      made *.wal files for hexen2.
    * bumped the version date stamp to 2014-04-27.

2014-04-26 (SVN):
    * Avoid using COM_DefaultExtension() whenever possible: it may lead
      to unpredictable results. Use a new procedure COM_AddExtension()
      which appends the given extension to the path if the one it has,
      if any, doesn't match.
    * bumped the version date stamp to 2014-04-26.

2014-04-24 (SVN):
    * oslibs/dos: recompile watt32 library after replacing all access()
      calls with _chmod(), so that it does not pull in monstrous deps.

2014-04-24 (SVN):
    * Unix (at least Linux) man pages for mkdir(2) document the EEXIST
      error: "pathname already exists (not necessarily as a directory).
      This includes the case where pathname is a symbolic link, dangling
      or not." So, add a check to see if the existing pathname is really
      a directory.
    * bumped the version date stamp to 2014-04-24.

2014-04-18 (SVN):
    * osx port: update SDLMain.m from SDL hg repository/SDL-1.2 branch.
    * bumped the version date stamp to 2014-04-18.

2014-04-17 (SVN):
    * meteor.hc (tornato_spin): fixed typo in pain_finished equality
      check: if(self.pain_finished==-1), not if(self.pain_finished=-1).
      issue was present since at least v0.42.
    * bumped the version date stamp to 2014-04-17.

2014-03-11 (SVN):
    * revert the r5197 'use a different approach to ignore mouse events'
      (1) the bug reporter found that it's an SDL-1.2 bug regarding IME:
      http://sf.net/p/uhexen2/discussion/425207/thread/6f168cfb/